force-app/package/objects/DataCloudAuthProvider__mdt/DataCloudAuthProvider__mdt.object-meta.xml
<CustomObject>
    <label>Data Cloud Auth Provider</label>
    <pluralLabel>Data Cloud Auth Providers</pluralLabel>
</CustomObject>