force-app/package/objects/DataCloudAuthProvider__mdt/fields/Auth_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider_Name__c</fullName>
    <description>The API Name of the Auth Provider, this is used to generate the Salesforce Callback URL</description>
    <inlineHelpText>The API Name of the Auth Provider, this is used to generate the Salesforce Callback URL</inlineHelpText>
    <label>Auth Provider Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>