force-app/package/objects/DataCloudAuthProvider__mdt/fields/Connected_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Id__c</fullName>
    <description>The connected App Id from the target Salesforce Org</description>
    <inlineHelpText>The connected App Id from the target Salesforce Org</inlineHelpText>
    <label>Connected App Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>