force-app/package/objects/DataCloudAuthProvider__mdt/fields/Data_Space_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Space_Name__c</fullName>
    <inlineHelpText>Specify the Data Space you want to connect to. This populates the dataspace body URL parameter. The default value is &quot;default&quot;.
Keep this value blank if you only have a single data space</inlineHelpText>
    <label>Data Space Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>