force-app/package/objects/DataCloudAuthProvider__mdt/fields/Enable_Error_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Error_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This option requires the &quot;Lightweight - Auth Provider Util v2&quot; (04t4K000002Jv1tQAC) package to be installed.</inlineHelpText>
    <label>Enable Error Logging</label>
    <type>Checkbox</type>
</CustomField>