force-app/package/objects/DataCloudAuthProvider__mdt/fields/Integration_Username__c.field-meta.xml
<CustomField>
    <fullName>Integration_Username__c</fullName>
    <description>The Salesforce username</description>
    <inlineHelpText>The Salesforce username that is used for the integration</inlineHelpText>
    <label>Integration Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>