force-app/package/objects/DataCloudAuthProvider__mdt/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if the target org is a sandbox</description>
    <inlineHelpText>Check this field if the target org is a sandbox</inlineHelpText>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>