force-app/package/objects/DataCloudAuthProvider__mdt/fields/JWT_Signing_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>JWT_Signing_Certificate_Name__c</fullName>
    <description>The API Name of the Certificate (stored in Salesforce) that is used to sign the JWT</description>
    <inlineHelpText>The API Name of the Certificate (stored in Salesforce) that is used to sign the JWT</inlineHelpText>
    <label>JWT Signing Certificate Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>