force-app/package/objects/DataCloudAuthProvider__mdt/fields/My_Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>My_Domain_URL__c</fullName>
    <description>The target org My Domain URL i.e. https://mydomain.my.salesforce.com</description>
    <inlineHelpText>The target org My Domain URL i.e. https://mydomain.my.salesforce.com</inlineHelpText>
    <label>My Domain URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>